--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <main>
       <form>
         <fieldset>
-          <legend>What is your name?</legend>
-          <label class="hidden" for="email">Enter your email address</label>
-          <input type="email" id="email">
+          <label for="name">What is your name?</label>
+          <input type="name" placeholder="type your name and hit enter" id="name">
         </fieldset>
       </form>
     </main>
