add css stylesheet

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 
   <title>Say Hello</title>
   <link rel="stylesheet" href="css/main.css">
+
 </head>
   <body>
     <header>
-      <a>Say Hello</a>
+      <h1>Say Hello</h1>
     </header>
     <main>
       <form>
@@ -19,4 +20,5 @@
         </fieldset>
       </form>
     </main>
+  <script src="js/main.js"></script>
   </body>
