--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <form>
         <fieldset>
           <label for="name">What is your name?</label>
-          <input type="name" placeholder="type your name and hit enter" id="name">
+          <input type="name" placeholder="Type your name and hit enter." id="name">
         </fieldset>
       </form>
     </main>
